# mathics-core

./: .editorconfig  .gitignore  .gitmodules  .gitpod.yml  .isort.cfg  .pep8  .pre-commit-config.yaml  .yamllint  AUTHORS.txt  CHANGES.md  CHANGES.rst  COPYING.txt  ChangeLog-spell-corrected.diff  FUTURE.rst  MANIFEST.in  Makefile  PAST.rst  README.rst  REPORTING-BUGS.md  SYMBOLS_MANIFEST.txt  bench-results.rst  codespell-ignore.txt  pyproject.toml  requirements-cython.txt  requirements-full.txt  setup.cfg  setup.py
.circleci/: config.yml
.circlei/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autoblack.yml  consistency-checks.yml  isort-and-black-checks.yml  macos.yml  mypy.yml  osx.yml  packages.yml  plot-tests.yml  pyodide.yml  ubuntu-bench.yml  ubuntu-cython.yml  ubuntu-minimal.yml  ubuntu-pyston.yml  ubuntu.yml  windows.yml
admin-tools/: build_and_check_manifest.py  check-versions.sh  fix_docstring_indent.py  make-JSON-tables.sh  make-dist.sh  make-op-tables.sh  make-operator-tables.sh  normalize_docstrings.py  pyenv-versions  release.sh  time-mathmp-sympy-fns.py
mathics/: __init__.py  __main__.py  benchmark.py  docpipeline.py  gather_latex_doc.py  interrupt.py  main.py  mathics3_code_parse.py  profile_mathics.py  repl.py  session.py  settings.py  show_profile_comparison.py  system_info.py  timing.py  version.py
mathics/algorithm/: __init__.py  clusters.py  integrators.py  introselect.py  optimizers.py  parts.py  series.py  simplify.py
mathics/autoload-cli/: settings.m
mathics/builtin/: __init__.py  arithmetic.py  assignment.py  attributes.py  base.py  codetables.py  comparison.py  compilation.py  compress.py  datentime.py  evaluation.py  exceptions.py  forms.py  functional.py  graphics.py  inference.py  inout.py  kernel_sessions.py  layout.py  lists.py  logic.py  lowlevelprofile.py  mainloop.py  makeboxes.py  manipulate.py  messages.py  no_meaning.py  numeric.py  numericarray.py  optimization.py  optiondoc.py  options.py  patterns.py  physchemdata.py  procedural.py  pymathics.py  quantities.py  recurrence.py  scoping.py  sparse.py  (+6 more)
mathics/compile/: __init__.py  base.py  compile.py  ir.py  types.py  utils.py
mathics/core/: __init__.py  assignment.py  atoms.py  attributes.py  builtin.py  convert.py  definitions.py  element.py  evaluation.py  evaluators.py  exceptions.py  expression.py  expression_constants.py  expression_predefined.py  formatter.py  interrupt.py  keycomparable.py  list.py  lists.py  load_builtin.py  makeboxes.py  number.py  numbers.py  pattern.py  prettyprint.py  pymathics.py  read.py  rules.py  streams.py  structure.py  subexpression.py  symbols.py  system_init.py  systemsymbols.py  util.py
mathics/data/: .gitignore
mathics/doc/: .gitignore  Makefile  __init__.py  common_doc.py  doc2rst.py  doc_entries.py  gather.py  images.sh  latex_doc.py  make-static-images.sh  md_doc.py  online.py  rst_parser.py  structure.py  utils.py
mathics/eval/: __init__.py  arithmetic.py  assignment.py  datetime.py  directories.py  distance.py  encoding.py  expression.py  hyperbolic.py  image.py  inference.py  lists.py  makeboxes.py  math_ops.py  nevaluator.py  numbers.py  numeric.py  numerify.py  parts.py  patterns.py  plot.py  pymathics.py  quantities.py  rules.py  scoping.py  set.py  stack.py  stackframe.py  string_tests.py  strings.py  sympy.py  tensors.py  test.py  testing_expressions.py  trace.py  tracing.py
mathics/form/: __init__.py  inputform.py  outputform.py  util.py
mathics/format/: __init__.py  asy.py  asy_fns.py  asy_polyhedra.py  inputform.py  js.py  json.py  latex.py  mathml.py  outputform.py  pane_text.py  prettyprint.py  svg.py  tex.py  text.py
test/: formtest.py  helper.py  test_algebra.py  test_arithmetic.py  test_assignment.py  test_calculus.py  test_cli.py  test_colors.py  test_combinatorial.py  test_combinatorica.py  test_compare.py  test_compile.py  test_constrmatrix.py  test_context.py  test_control.py  test_convert.py  test_custom_boxconstruct.py  test_custom_boxexpression.py  test_datentime.py  test_deletecases.py  test_doc.py  test_duplicated.py  test_evaluation.py  test_evaluators.py  test_files.py  test_format.py  test_hash.py  test_help.py  test_importexport.py  test_inout.py  test_linalg.py  test_main.py  test_main_preeval.py  test_nintegrate.py  test_numericq.py  test_numpy_utils.py  test_oeis.py  test_parts.py  test_repl.py  test_returncode.py  (+8 more)
test/autoload/: test_gudermannian.py
test/builtin/: test-optimization.py  test_arithmetic.py  test_assignment.py  test_attributes.py  test_binary.py  test_comparison.py  test_compilation.py  test_compile.py  test_datentime.py  test_directories.py  test_evaluation.py  test_evalution.py  test_exp_structure.py  test_file_operations.py  test_forms.py  test_functional.py  test_intfns.py  test_makeboxes.py  test_messages.py  test_number_form.py  test_numeric.py  test_numericarray.py  test_options.py  test_patterns.py  test_physchemdata.py  test_procedural.py  test_quantities.py  test_rules.py  test_scoping.py  test_sort.py  test_statistics.py  test_strings.py  test_system.py  test_tensor.py  test_testing_expressions.py  test_trace.py
test/consistency-and-style/: test_docstrings_and_summary_text.py  test_duplicate_builtins.py  test_summary_text.py
test/core/: test_arithmetic.py  test_assignment.py  test_atoms.py  test_builtin.py  test_definitions.py  test_elements_properties.py  test_expression.py  test_expression_constructor.py  test_flatten_head.py  test_is_literal.py  test_keycomparable.py  test_load_builtin.py  test_pattern.py  test_patterns.py  test_pickle.py  test_rules.py  test_serialization.py  test_streams.py  test_symbols.py  test_sympy_python_convert.py
test/data/: input-bug.m  inputfile-bug.m  lisp1.m
test/doc/: test_common.py  test_doctests.py  test_latex.py  test_rst_parser.py
test/eval/: test_makeboxes.py  test_patterns.py  test_tensors.py
test/format/: convert_yaml2json.py  format_test.m  format_tests-WMA.yaml  format_tests.json  format_tests.m  test.m  (+12 more)
unittest/: build_expression.py
unittests/: walk_parts.py
(+945 files in other folders)
