[build-system]
requires = [
    "setuptools>=70.0.0", # CVE-2024-38335 recommends this
    "cython>=0.15.1; implementation_name!='pypy'",
    # For mathics-generate-json-table
    "Mathics-Scanner >= 1.3.0",
    "packaging",
]
build-backend = "setuptools.build_meta"

[project]
description = "A general-purpose computer algebra system."
dependencies = [
    "Mathics-Scanner >= 1.3.0",
    "mpmath>=1.2.0",
    "numpy<1.27",
    "palettable",
    # Pillow 9.1.0 supports BigTIFF with big-endian byte order.
    # ExampleData image hedy.tif is in this format.
    # Pillow 9.2 handles sunflowers.jpg
    "stopit; platform_system != 'Emscripten'",
    "pillow >= 9.2",
    "pint",
    "python-dateutil",
    # Pympler is used in ByteCount[] and MemoryInUse[].
    "Pympler",
    "requests",
    "scipy",
    "setuptools",
    "sympy>=1.13,<1.14",
]
license = {text = "GPL"}
name = "Mathics3"
requires-python = ">=3.8" # Sympy 1.11 is supported only down to 3.8
readme = "README.rst"
keywords = ["Mathematica", "Wolfram", "Interpreter", "Shell", "Math", "CAS"]
maintainers = [
    {name = "Mathics Group", email = "mathics-devel@googlegroups.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Interpreters",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mathics.org/"
Downloads = "https://github.com/Mathics3/mathics-core/releases"

[project.optional-dependencies]
dev = [
    "pexpect",
    "pytest",
]
full = [
    "ipywidgets",
    "llvmlite",
    "lxml",
    "psutil",
    "pyocr",
    "scikit-image >= 0.17",
    "unidecode",
    "wordcloud >= 1.9.3",
]
cython = [
    "cython",
]

[project.scripts]
mathics = "mathics.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mathics*"]

[tool.setuptools.package-data]
"mathics" = [
    "data/*.csv",
    "data/*.json",
    "data/*.yml",
    "data/*.yaml",
    "data/*.pcl",
    "data/ExampleData/*",
    "doc/xml/data",
    "doc/tex/data",
    "autoload/*.m",
    "autoload-cli/*.m",
    "autoload/formats/*/Import.m",
    "autoload/formats/*/Export.m",
    "Packages/*/*.m",
    "Packages/*/Kernel/init.m",
]
"mathics.doc" = [
    "documentation/*.mdoc",
    "xml/data",
]
"mathics.builtin.pymimesniffer" = [
    "mimetypes.xml",
]

[tool.setuptools.dynamic]
version = {attr = "mathics.version.__version__"}

[tool.mypy]
force_union_syntax = true

[[tool.mypy.overrides]]
module = ["mpmath", "llvmlite.*", "trepan.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mathics.benchmark", "mathics.builtin.*", "mathics.eval.*", "test.*"]
ignore_errors = true
