[metadata]
description_file = README.rst

# Recommended flake8 settings while editing zoom, we use Black for the final
# linting/say in how code is formatted
#
# pip install flake8 flake8-bugbear
#
# This will warn/error on things that black does not fix, on purpose.

# This config file MUST be ASCII to prevent weird flake8 dropouts

[flake8]
# About max-line-length setting:
# Our homegrown autodoc has brain-dead line wrapping which forces long lines in docstrings
max-line-length = 300
max-complexity = 12
select = E,F,W,C,B,B9
ignore =
    # E123 closing bracket does not match indentation of opening bracket's line
    E123
    # E203 whitespace before ':' (Not PEP8 compliant, Python Black)
    E203
    # E501 line too long (82 > 79 characters) (replaced by B950 from flake8-bugbear,
    # https://github.com/PyCQA/flake8-bugbear)
    E501
    # W503 line break before binary operator (Not PEP8 compliant, Python Black)
    W503
    # W504 line break after binary operator (Not PEP8 compliant, Python Black)
    W504
    # C901 function too complex - since many of zz9 functions are too complex with a lot
    # of if branching
    C901
    # module level import not at top of file. This is too restrictive. Can't even have a
    # docstring higher.
    E402

[pycodestyle]
max-line-length = 300

[pylint]
max-line-length = 300
statistics = True
